--- a/meteor-userAccounts/package.json
+++ b/meteor-userAccounts/package.json
@@ -10,6 +10,7 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "simpl-schema": "^1.5.0"
   }
 }
